force-app/main/default/objects/Asset_Dependency__c/Asset_Dependency__c.object-meta.xml
<CustomObject>
    <label>Asset Dependency</label>
    <pluralLabel>Asset Dependencies</pluralLabel>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks operational dependencies between assets to understand impact when an asset fails</description>
</CustomObject>