force-app/main/default/objects/Asset_Dependency__c/fields/Dependency_Strength__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Strength__c</fullName>
    <label>Dependency Strength</label>
    <description>Strength of dependency - affects edge thickness in graph</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Stop</fullName>
            </value>
            <value>
                <fullName>Degraded Service</fullName>
                <default>true</default>
                <label>Degraded Service</label>
            </value>
            <value>
                <fullName>Soft Dependency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>