force-app/main/default/objects/Asset_Dependency__c/fields/Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Type__c</fullName>
    <label>Dependency Type</label>
    <description>Type of operational dependency</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Network Connection</fullName>
                <default>true</default>
                <label>Network Connection</label>
            </value>
            <value>
                <fullName>Power Supply</fullName>
            </value>
            <value>
                <fullName>Fiber Connection</fullName>
            </value>
            <value>
                <fullName>Data Feed</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>