force-app/main/default/objects/Asset_Dependency__c/fields/Dependent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Asset__c</fullName>
    <label>Dependent Asset</label>
    <description>The asset that depends on the source asset</description>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>