force-app/main/default/objects/Asset_Dependency__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Indicates if this dependency is currently active</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>