force-app/main/default/objects/Asset_Dependency__c/fields/Relationship_Style__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Style__c</fullName>
    <label>Relationship Style</label>
    <description>Visual style for edge rendering</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
                <default>true</default>
                <label>Physical</label>
            </value>
            <value>
                <fullName>Logical</fullName>
            </value>
            <value>
                <fullName>Inferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>