force-app/main/default/objects/Asset_Dependency__c/fields/Source_Asset__c.field-meta.xml
<CustomField>
    <fullName>Source_Asset__c</fullName>
    <label>Source Asset</label>
    <description>The asset that other assets depend on</description>
    <type>Lookup</type>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Dependent Assets</relationshipLabel>
    <relationshipName>Dependent_Assets</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>